<resources>
    <string name="app_name">CYBER BANK</string>
    <string name="txt_dados">Cadastre-se Gratuitamente !</string>
    <string name="hint_name">Nome</string>
    <string name="hint_CPF">CPF</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_saldo">Saldo</string>
    <string name="btn_txt_criar_conta">Criar Conta</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_boas_vindas">Olá,</string>
    <string name="txt_name_placeholder">nome</string>
    <string name="txt_conta">Saldo Disponível</string>
    <string name="txt_saldo_conta_main">R$ 0.00</string>
    <string name="txt_depositar">Depositar</string>
    <string name="hint_txt_inserir_valor">Valor</string>
    <string name="txt_transferir">Transferir</string>
    <string name="btn_txt_voltar">Voltar</string>
    <string name="txt_transferencias">transferências</string>
    <string name="txt_sacar">sacar</string>
    <string name="descricao_da_imagem_do_banco">image logo banco</string>
    <string name="txt_cheque_especial">Cheque especial</string>


</resources>