<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E386A"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="436dp"
        android:layout_marginTop="150dp"
        android:gravity="center"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_dados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_dados"
            android:textColor="@color/white"
            android:textSize="24sp"


            />

        <EditText
            android:id="@+id/NomeRegister"
            android:layout_width="250dp"
            android:layout_height="50dp"

            android:layout_marginTop="20dp"

            android:autofillHints="name"


            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:padding="10dp"

            android:textColor="#F4FEFE"
            android:textColorHint="#F4FEFE"

            />

        <EditText
            android:id="@+id/CPFRegister"
            android:layout_width="250dp"
            android:layout_height="50dp"

            android:layout_marginTop="20dp"

            android:autofillHints="name"


            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_CPF"
            android:inputType="text"
            android:padding="10dp"

            android:textColor="#F4FEFE"
            android:textColorHint="#F4FEFE"

            />

        <EditText
            android:id="@+id/SenhaRegister"
            android:layout_width="250dp"
            android:layout_height="50dp"

            android:layout_marginTop="20dp"

            android:autofillHints="emailAddress"


            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_senha"
            android:inputType="textEmailAddress"
            android:padding="10dp"

            android:textColor="#F4FEFE"
            android:textColorHint="#F4FEFE"

            />

        <EditText
            android:id="@+id/SaldoRegister"
            android:layout_width="250dp"
            android:layout_height="50dp"

            android:layout_marginTop="20dp"

            android:autofillHints="null"

            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_saldo"
            android:inputType="number|numberDecimal"
            android:padding="10dp"

            android:textColor="#F4FEFE"
            android:textColorHint="#F4FEFE"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_criar_conta"
            android:layout_width="250dp"
            android:layout_height="60dp"

            android:layout_marginTop="50dp"


            android:backgroundTint="#F4FEFE"
            android:text="@string/btn_txt_criar_conta"
            android:textColor="#476d99"

            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>